--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "KObservable",
-  "version": "0.0.0",
+  "version": "0.4.0",
   "description": "An observable data model",
   "keywords": [
     "Object",
@@ -45,7 +45,5 @@
     }
   ],
   "directories": {},
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
