change name to lowercase

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KObservable",
+  "name": "kobservable",
   "version": "0.4.0",
   "description": "An observable data model",
   "keywords": [
