--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kobservable",
+  "name": "konnektdt",
   "version": "0.4.2",
   "description": "An observable data model",
   "keywords": [
@@ -26,10 +26,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/keleko34/KObservable.git"
+    "url": "git://github.com/keleko34/konnektdt.git"
   },
   "bugs": {
-    "url": "https://github.com/keleko34/KObservable/issues"
+    "url": "https://github.com/keleko34/konnektdt/issues"
   },
   "devDependencies": {
     "K_Tasks": "^0.5.0"
@@ -37,8 +37,8 @@
   "scripts": {
     "installer": "npm run installGulp && npm run installBower && npm i && bower i",
     "i": "npm run installGulp && npm run installBower && npm i && bower i",
-    "installBower": "npm info bower -g || npm i bower -g",
-    "installGulp": "npm info gulp -g || npm i git+https://github.com/keleko34/gulp.git -g"
+    "installBower": "npm list -g bower || npm i bower -g",
+    "installGulp": "npm list -g gulp || npm i git+https://github.com/keleko34/gulp.git -g"
   },
   "maintainers": [
     {
